--- a/ppms_project/profilingApp/templates/activities/Admin - barangay.html
+++ b/ppms_project/profilingApp/templates/activities/Admin - barangay.html
@@ -14,7 +14,7 @@
                 <div>
                     <a href="#" class="name" style="text-decoration: none;">
                         <img id="adminIcon" class="navbar-icon" src="{% static '/Media/avatar.png' %}" alt="dasma-logo">
-                        <span id="hidetitle" class="brand__name" style="color:rgb(0, 0, 0); margin-left:10px;">City of Dasmariñas</span>
+                        <span id="adminHidetitle" class="brand__name" style="color:rgb(0, 0, 0); margin-left:10px;">City of Dasmariñas</span>
                     </a>
                 </div>
                 <label class="burger "for="toggle"><i  id="hamburger" class="fa fa-fw fa-bars" style="font-size: 24px;"></i></label>
