--- a/ppms_project/profilingApp/templates/activities/Admin - Preschooler_barangay.html
+++ b/ppms_project/profilingApp/templates/activities/Admin - Preschooler_barangay.html
@@ -14,7 +14,7 @@
                 <div>
                     <a href="#" class="name" style="text-decoration: none;">
                         <img id="adminIcon" class="navbar-icon" src="{% static '/Media/avatar.png' %}" alt="dasma-logo">
-                        <span id="hidetitle" class="brand__name" style="color:rgb(0, 0, 0); margin-left:10px;">City of Dasmariñas</span>
+                        <span id="adminHidetitle" class="brand__name" style="color:rgb(0, 0, 0); margin-left:10px;">City of Dasmariñas</span>
                     </a>
                 </div>
                 <label class="burger "for="toggle"><i  id="hamburger" class="fa fa-fw fa-bars" style="font-size: 24px;"></i></label>
@@ -138,55 +138,55 @@
                 <hr>
             </div>
             <div class="row d-flex align-items-stretch">
-                <div class="col-md mb-2">
+                <div class="col-lg mb-2">
                 <div class="card shadow-sm bg-white rounded h-100">
                         <!-- <div class="card-header" style="background-color: rgb(0, 165, 79) !important;"> -->
                         <div class="card-header">
-                            <h4 class="card-title">Severely Wasted</h4>
+                            <h5 class="card-title">Severely Wasted</h5>
                         </div>
                         <div class="card-body text-center">
                             <p style="font-size: xx-large;" class="card-text">{{ severly }}</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-md mb-2">
+                <div class="col-lg mb-2">
                     <div class="card shadow-sm bg-white rounded h-100">
                         <!-- <div class="card-header" style="background-color: rgb(233, 221, 0) !important;"> -->
                         <div class="card-header">
-                            <h4 class="card-title">Moderately Wasted</h4>
+                            <h5 class="card-title">Moderately Wasted</h5>
                         </div>
                         <div class="card-body text-center">
                             <p style="font-size: xx-large;" class="card-text">{{ wasted }}</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-md mb-2">
+                <div class="col-lg mb-2">
                     <div class="card shadow-sm bg-white rounded h-100 ">
                         <!-- <div class="card-header " style="background-color: rgb(238, 29, 35) !important;"> -->
                         <div class="card-header">
-                            <h4 class="card-title">Normal</h4>
+                            <h5 class="card-title">Normal</h5>
                         </div>
                         <div class="card-body text-center">
                             <p style="font-size: xx-large;" class="card-text">{{ normal }}</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-md mb-2">
+                <div class="col-lg mb-2">
                     <div class="card shadow-sm bg-white rounded h-100 ">
                         <!-- <div class="card-header" style="background-color: rgb(242, 98, 33)!important;"> -->
                             <div class="card-header">
-                            <h4 class="card-title">Overweight</h4>
+                            <h5 class="card-title">Overweight</h5>
                         </div>
                         <div class="card-body text-center">
                             <p style="font-size: xx-large;" class="card-text">{{ overweight }}</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-md mb-2">
+                <div class="col-lg mb-2">
                     <div class="card shadow-sm bg-white rounded h-100">
                         <!-- <div class="card-header" style="background-color: rgb(233, 221, 0) !important;"> -->
                         <div class="card-header">
-                            <h4 class="card-title">Obese</h4>
+                            <h5 class="card-title">Obese</h5>
                         </div>
                         <div class="card-body text-center">
                             <p style="font-size: xx-large;" class="card-text">{{ obese }}</p>
