--- a/ppms_project/profilingApp/templates/activities/BHW Preschooler Dashboard.html
+++ b/ppms_project/profilingApp/templates/activities/BHW Preschooler Dashboard.html
@@ -173,12 +173,11 @@
                     <div>
                         <h5 class="modal-title fa fa-archive" id="exampleModalLabel"> Preschooler Archive</h5>
                     </div>
-                    <div >
-                        <button type="button" class="btn" style="background-color: #EF3A25; color: white;" data-bs-dismiss="modal" aria-label="Close"> Close</button>
-                    </div>
+
                 </div>
                 <div class="modal-body p-0">
                     <div class="table-responsive " style="margin:30px;">
+                        <h5 class="text-center">List of preschooler who have an age older that 60 months.</h5>
                         <table class="table table-hover table-cell-border" id="archive" >
                             <thead>
                                 <tr style="text-align: center;">
@@ -223,8 +222,8 @@
                         </table>
                     </div>
                 </div>
-                <div class="card-footer text-center ">
-                    <h5 class="text-muted h4">List of preschooler who have an age older that 60 months.</h5>
+                <div class="card-footer d-flex justify-content-end">
+                        <button type="button" class="btn" style="background-color: #EF3A25; color: white;min-width: 10%;" data-bs-dismiss="modal" aria-label="Close"> Close</button>
                 </div>
             </div>
         </div>
