--- a/ppms_project/profilingApp/templates/activities/Parent - Preschooler Profile.html
+++ b/ppms_project/profilingApp/templates/activities/Parent - Preschooler Profile.html
@@ -55,9 +55,9 @@
             </div>
             <div class="col-xl-4  col-md-6 col-12">
                 <div class="row d-flex justify-content-center align-items-stretch">
-                    <div class="mb-3 d-flex justify-content-md-end justify-content-center h-100">
-                        <button style="background-color: #188045; color: white; max-height: 70px !important; height: 100%;" type="button" class="btn" data-bs-toggle="modal" data-bs-target="#pres_history"><span class="fas fa-history"></span> Nutritional Status History</button>
-                        <a href="{% url 'immunization_schedule' preschooler.id %}"><button style="background-color: #188045; color: white; margin-left:10px; max-height: 70px !important;" type="button" class="btn"><span class="fa fa-address-card"></span> Immunization Status</button></a>
+                    <div class="mb-3 d-flex justify-content-md-end justify-content-center align-items-stretch">
+                        <button style="background-color: #188045; color: white;" type="button" class="btn" data-bs-toggle="modal" data-bs-target="#pres_history"><span class="fas fa-history"></span> Nutritional Status History</button>
+                        <a href="{% url 'immunization_schedule' preschooler.id %}" style="background-color: #188045; color: white; margin-left:10px;" type="button" class="btn"><span class="fa fa-address-card"></span> Immunization Status</a>
                     </div>
                 </div>
             </div>
