severlys to severely

--- a/ppms_project/profilingApp/templates/activities/Parent - Preschooler Profile.html
+++ b/ppms_project/profilingApp/templates/activities/Parent - Preschooler Profile.html
@@ -55,9 +55,9 @@
             </div>
             <div class="col-xl-4  col-md-6 col-12">
                 <div class="row d-flex justify-content-center align-items-stretch">
-                    <div class="mb-3 d-flex justify-content-md-end justify-content-center align-items-stretch">
-                        <button style="background-color: #188045; color: white;" type="button" class="btn" data-bs-toggle="modal" data-bs-target="#pres_history"><span class="fas fa-history"></span> Nutritional Status History</button>
-                        <a href="{% url 'immunization_schedule' preschooler.id %}" style="background-color: #188045; color: white; margin-left:10px;" type="button" class="btn"><span class="fa fa-address-card"></span> Immunization Status</a>
+                    <div class="mb-3 d-flex justify-content-md-end justify-content-center h-100">
+                        <button style="background-color: #188045; color: white; max-height: 70px !important; height: 100%;" type="button" class="btn" data-bs-toggle="modal" data-bs-target="#pres_history"><span class="fas fa-history"></span> Nutritional Status History</button>
+                        <a href="{% url 'immunization_schedule' preschooler.id %}"><button style="background-color: #188045; color: white; margin-left:10px; max-height: 70px !important;" type="button" class="btn"><span class="fa fa-address-card"></span> Immunization Status</button></a>
                     </div>
                 </div>
             </div>
@@ -519,7 +519,7 @@
                                                         
                                                         <div class="col-lg-6 col-12 d-flex justify-content-start mx-md-4  mb-2" >
                                                             <i class="fas fa-2x fa-square d-flex align-items-center" style="color: rgb(238, 29, 35);"></i>
-                                                            <span class="mx-3"><h5>Severly Wasted</h5></span>
+                                                            <span class="mx-3"><h5>Severely Wasted</h5></span>
                                                         </div>
                                                         <div class="col-lg-6 col-12 d-flex justify-content-start" >
                                                             <i class="fas fa-2x fa-square" style="color: rgb(242, 98, 33);"></i>
@@ -570,7 +570,7 @@
                                                         
                                                         <div class="col-lg-6 col-12 d-flex justify-content-start mx-md-4  mb-2" >
                                                             <i class="fas fa-2x fa-square d-flex align-items-center" style="color: rgb(238, 29, 35);"></i>
-                                                            <span class="mx-3"><h5>Severly Underweight</h5></span>
+                                                            <span class="mx-3"><h5>Severely Underweight</h5></span>
                                                         </div>
                                                         <div class="col-lg-6 col-12 d-flex justify-content-start" >
                                                             <i class="fas fa-2x fa-square" style="color: rgb(242, 98, 33);"></i>
