--- a/ppms_project/profilingApp/templates/activities/Admin Home.html
+++ b/ppms_project/profilingApp/templates/activities/Admin Home.html
@@ -94,7 +94,7 @@
                                 </span></a>
                             </a>
                             <a id="navText" style="color:white; text-decoration: none;font-size: 20px;"href="{% url 'logout' %}" data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7"
-                            title="Log Out Account">Sign Out</a>
+                            title="Log Out Account"><span style="font-size: 20px; padding: 5px;" >Sign Out</span></a>
                             <ul class="dropdown-menu dropdown-menu-end p-2" style="margin-right:3%;" aria-labelledby="dropdownUser1">
                                 <div class="card p-3 d-flex align-items-center justify-content-center">
                                     <div class="row d-block">
