--- a/ppms_project/profilingApp/templates/activities/login_registration.html
+++ b/ppms_project/profilingApp/templates/activities/login_registration.html
@@ -229,7 +229,7 @@
     <div class="site-footer" style="background-color: rgba(244, 242, 242, 0.54);">
         <div class="container">
             <div class="row">
-                <div class="col-lg-4">
+                <div class="col-lg-4 mb-2">
                     <h2 class="footer-heading mb-4">About</h2>
                     <p>The NNC, as mandated by law, is the country's highest policy-making 
                         and coordinating body on nutrition.
