--- a/ppms_project/profilingApp/templates/activities/Admin - Preschooler.html
+++ b/ppms_project/profilingApp/templates/activities/Admin - Preschooler.html
@@ -204,9 +204,9 @@
                     <div class="card-body p-4">
                         <canvas id="myBar" width="100%" height="50"></canvas>
                     </div>
-                    <div class="card-footer small text-muted">
+                    <!-- <div class="card-footer small text-muted">
                         Updated yesterday at 11:59 PM
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
