--- a/ppms_project/profilingApp/templates/activities/BHW Home.html
+++ b/ppms_project/profilingApp/templates/activities/BHW Home.html
@@ -187,9 +187,9 @@
                     <div class="card-body p-3">
                         <canvas id="myBar" width="100%" height="50"></canvas>
                     </div>
-                    <div class="card-footer small text-muted">
+                    <!-- <div class="card-footer small text-muted">
                         Updated yesterday at 11:59 PM
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -217,6 +217,8 @@
     // Set new default font family and font color to mimic Bootstrap's default styling
     Chart.defaults.global.defaultFontFamily = '-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif';
     Chart.defaults.global.defaultFontColor = '#292b2c';
+    
+    
 
     // Pie Chart Example
     var data_count = JSON.parse('{{ count_data|escapejs }}')
@@ -225,13 +227,21 @@
     type: 'bar',
     options: {
         legend: {
+            
             display: false
+        },
+        scales:{
+            yAxes:[{
+                ticks: {
+                    beginAtZero: true,
+                }
+            }]
         }
     },
     data:{
         labels: ["Severely Wasted", "Moderately Wasted", "Normal","Overweight","Obese"],
         datasets: [{
-                label: 'Normal',
+                label: 'Preschoolers',
                 data: data_count,
                 backgroundColor: [
                 'rgb(238, 29, 35)',
