--- a/ppms_project/profilingApp/templates/activities/Admin Home.html
+++ b/ppms_project/profilingApp/templates/activities/Admin Home.html
@@ -66,7 +66,7 @@
                                 title="BHW Validation" >
                                 <i id="navIcon" class="fa fa-fw fa-user-md" style="font-size: 24px;"></i>
                                 <span id="navText" style="font-size: 20px;" >BHW Validation</span>
-                                <span class="position-absolute top-25 start-75 translate-middle badge rounded-pill bg-danger">
+                                <span class="position-absolute top-25 start-75 translate-middle badge -pill bg-danger">
                                     {{ invalidated_count }}
                                     <span class="visually-hidden">BHW Validation</span>
                                 </span></a>
@@ -89,7 +89,7 @@
                             <a id="navIcon" class="btn nav-link position-relative" id="dropdownUser1" data-bs-toggle="dropdown" data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7"
                             title="User Settings" aria-expanded="false">
                                 <i class="fa fa-fw fa-user-cog bi" style="font-size: 24px;"></i>
-                                <span class="position-absolute top-100 start-75 translate-middle badge rounded-pill text-dark" style="border-radius: 50%;">
+                                <span class="position-absolute top-100 start-75 translate-middle badge -pill text-dark" style="border-radius: 50%;">
                                     <i class="fa fa-lg fa-fw fa-caret-down bg-light" style="border-radius: 25%; margin-bottom: 15px;"></i>
                                 </span></a>
                             </a>
@@ -138,11 +138,11 @@
                     <div class="row mb-3 align-items-stretch">
                         <!-- Validated BHW Count Card  -->
                         <div class="col-xxl-3 col-sm-6 mb-2">                      
-                            <div class="card hoverable shadow-sm bg-white rounded d-flex align-items-stretch rounded" style="height: 165px;">
-                                <div class="card-body p-4 mt-2 d-flex flex-column align-items-stretch justify-content-center">
+                            <div class="card hoverable shadow-sm bg-white  d-flex align-items-stretch " style="height: 165px;">
+                                <div class="card-body p-4 d-flex flex-column align-items-stretch justify-content-center">
                                     <div class="row">
                                         <div class="col-4 d-flex justify-content-center align-items-center text-center">
-                                            <i class="fas fa-3x fa-lg fa-user-md" style="color: #1bb15c ; position:absolute;"></i>
+                                            <i class="fas fa-3x fa-lg fa-user-md" style="color: #28a745 ; position:absolute;"></i>
                                         </div>
                                         <div class="col-8 d-block justify-content-center text-center align-items-center" >
                                             <div class="row d-flex justify-content-center text-center align-items-stretch">
@@ -158,12 +158,12 @@
                         </div>
                         <!-- Parents Count Card  -->
                         <div class="col-xxl-3 col-sm-6 mb-2">
-                            <div class="card hoverable shadow-sm bg-white rounded d-flex align-items-stretch rounded" style="height: 165px;">
-                                <div class="card shadow-sm bg-white rounded d-flex align-items-stretch" style="height: 165px;">
-                                    <div class="card-body p-4 mt-2 d-flex flex-column align-items-stretch justify-content-center">
+                            <div class="card hoverable shadow-sm bg-white  d-flex align-items-stretch " style="height: 165px;">
+                                <div class="card shadow-sm bg-white  d-flex align-items-stretch" style="height: 165px;">
+                                    <div class="card-body p-4  d-flex flex-column align-items-stretch justify-content-center">
                                         <div class="row">
                                             <div class="col-4 d-flex justify-content-center align-items-center text-center">
-                                                <i class="fas fa-3x fa-lg fa-user" style="color: #1bb15c ; position:absolute;"></i>
+                                                <i class="fas fa-3x fa-lg fa-user" style="color: #f26221 ; position:absolute;"></i>
                                             </div>
                                             <div class="col-8 d-block justify-content-center text-center align-items-center" >
                                                 <div class="row d-flex justify-content-center text-center align-items-center">
@@ -180,11 +180,11 @@
                         </div>
                         <!-- Non - Validated BHW Count Card  -->
                         <div class="col-xxl-3 col-sm-6 mb-2 ">
-                            <div class="card hoverable shadow-sm bg-white rounded d-flex align-items-stretch rounded" style="height: 165px;">
-                                <div class="card-body p-3 mt-2 ms-3 d-flex flex-column align-items-stretch justify-content-center">
+                            <div class="card hoverable shadow-sm bg-white  d-flex align-items-stretch " style="height: 165px;">
+                                <div class="card-body p-3  ms-3 d-flex flex-column align-items-stretch justify-content-center">
                                     <div class="row">
                                         <div class="col-4 d-flex justify-content-center align-items-center text-center">
-                                            <i class="fas fa-3x fa-lg fa-user-times" style="color: #1bb15c ; position:absolute;"></i>
+                                            <i class="fas fa-3x fa-lg fa-user-md" style="color: #dc3545 ; position:absolute;"></i>
                                         </div>
                                         <div class="col-8 d-block justify-content-center text-center align-items-center" >
                                             <div class="row d-flex justify-content-center text-center align-items-center">
@@ -200,11 +200,11 @@
                         </div>
                         <!-- Preschoolers Count Card  -->
                         <div class="col-xxl-3 col-sm-6 mb-2">
-                            <div class="card hoverable shadow-sm bg-white rounded d-flex align-items-stretch rounded" style="height: 165px;">
-                                <div class="card-body p-4 mt-2 d-flex flex-column align-items-stretch justify-content-center">
+                            <div class="card hoverable shadow-sm bg-white d-flex align-items-stretch " style="height: 165px;">
+                                <div class="card-body p-4  d-flex flex-column align-items-stretch justify-content-center">
                                     <div class="row">
                                         <div class="col-4 d-flex justify-content-center align-items-center text-center">
-                                            <i class="fas fa-3x fa-lg fa-child" style="color: #1bb15c ; position:absolute;"></i>
+                                            <i class="fas fa-3x fa-lg fa-child" style="color: #ffc107 ; position:absolute;"></i>
                                         </div>
                                         <div class="col-8 d-block justify-content-center text-center align-items-center" >
                                             <div class="row d-flex justify-content-center text-center align-items-center">
@@ -221,61 +221,61 @@
                             </div>
                         </div>
                         <!-- BHW List Table Card  -->
-                        <div class='row d-flex align-items-stretch mb-2'>
-                        <div class="col-xl-12">
-                            <div class="card shadow-sm bg-white rounded h-100">
-                                <div class="card-header">
-                                    <h4 style="Padding: 10px 40px 0px 0px;">Barangay Health Workers</h4>
-                                </div>
-                                <div class="card-body p-3 ">
-                                    <div class="table-responsive">
-                                        <table class="table table-hover" style="border:none " id="user_list">
-                                            <thead>
-                                                <tr>
-                                                    <th scope="col" class="text-center">No.</th>
-                                                    <th scope="col" class="text-center">First Name</th>
-                                                    <th scope="col" class="text-center">Middle Name</th>
-                                                    <th scope="col" class="text-center">Last Name</th>
-                                                    <th scope="col" class="text-center">Suffix</th>
-                                                    <th scope="col" class="text-center">Barangay</th>
-                                                    <th scope="col" class="text-center">Status</th>
-                                                </tr>
-                                            </thead>
-                                            <tbody>
-                                                {% for bhw in bhws %}
-                                                <tr>
-                                                    <td class="text-center"></td>
-                                                    <td class="text-center">{{ bhw.user.first_name }}</td>
-                                                    <td class="text-center">{{ bhw.user.middle_name }}</td>
-                                                    <td class="text-center">{{ bhw.user.last_name }}</td>
-                                                    <td class="text-center">{{ bhw.user.suffix_name }}</td>
-                                                    <td class="text-center">{{ bhw.bhw_barangay}}</td>
-                                                    {% if bhw.is_validated is True %}
-                                                        <td class="text-center" style="color: green;">Validated</td>
-                                                    {% else %}
-                                                        <td class="text-center" style="color: orangered;">Unvalidated</td>
-                                                    {% endif %}
-                                                </tr>
-                                                {% endfor %}                                        
-                                            </tbody>
-                                        </table>
+                        <div class='row d-flex align-items-stretch'>
+                            <div class="col-xl-12">
+                                <div class="card shadow-sm bg-white h-100">
+                                    <div class="card-header">
+                                        <h4 style="Padding: 10px 40px 0px 0px;">Barangay Health Workers</h4>
+                                    </div>
+                                    <div class="card-body p-3 ">
+                                        <div class="table-responsive">
+                                            <table class="table table-hover" style="border:none " id="user_list">
+                                                <thead>
+                                                    <tr>
+                                                        <th scope="col" class="text-center">No.</th>
+                                                        <th scope="col" class="text-center">First Name</th>
+                                                        <th scope="col" class="text-center">Middle Name</th>
+                                                        <th scope="col" class="text-center">Last Name</th>
+                                                        <th scope="col" class="text-center">Suffix</th>
+                                                        <th scope="col" class="text-center">Barangay</th>
+                                                        <th scope="col" class="text-center">Status</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    {% for bhw in bhws %}
+                                                    <tr>
+                                                        <td class="text-center"></td>
+                                                        <td class="text-center">{{ bhw.user.first_name }}</td>
+                                                        <td class="text-center">{{ bhw.user.middle_name }}</td>
+                                                        <td class="text-center">{{ bhw.user.last_name }}</td>
+                                                        <td class="text-center">{{ bhw.user.suffix_name }}</td>
+                                                        <td class="text-center">{{ bhw.bhw_barangay}}</td>
+                                                        {% if bhw.is_validated is True %}
+                                                            <td class="text-center" style="color: green;">Validated</td>
+                                                        {% else %}
+                                                            <td class="text-center" style="color: orangered;">Unvalidated</td>
+                                                        {% endif %}
+                                                    </tr>
+                                                    {% endfor %}                                        
+                                                </tbody>
+                                            </table>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                        </div>  
-                    </div>
+                            </div>  
+                        </div>
                 </div>
                 <!-- Pie Chart Card  -->
                 <div class="container-fluid col-xxl-4 col-md-12 align-self-stretch">
                     <div class="col-xl-12 mb-3">
-                        <div class="card shadow-sm bg-white rounded">  
+                        <div class="card shadow-sm bg-white ">  
                             <div class="card-header">
-                                <i class="fas fa-lg fa-chart-pie" style="color:orange; position:relative; margin-right:10px;"></i>Overview Chart</div>
+                                <i class="fas fa-lg fa-chart-pie" style="color:rgb(255, 165, 0); position:relative; margin-right:10px;"></i>Overview Chart</div>
                             <div class="card-body p-md-4 d-flex flex-row justify-content-center text-center align-items-center">
                                 <canvas class="chart-view" id="myPieChart" width="470" height="550" style="display: block; box-sizing: border-box; max-height: 650; max-width: 570;" ></canvas>  
                             </div>
                         </div>
-                        <div class="card-footer text-muted justify-content-center text-center align-items-center">
+                        <div class="card-footer text-muted justify-content-center text-center align-items-center" style="height: 50px;">
                             <p> hover over colored area to see value</p>
                         </div>
                     </div>
@@ -340,10 +340,10 @@
     var myPieChart = new Chart(ctx, {
     type: 'polarArea',
     data: {
-        labels: ["Validated", "Invalidated", "Parent", "Preschooler"],
+        labels: ["Validated", "Unvalidated", "Parent", "Preschooler"],
         datasets: [{
         data: data_count,
-        backgroundColor: ['#dc3545', '#ffc107', '#28a745'],
+        backgroundColor: [ '#28a745','#dc3545','#f26221','#ffc107'],
         }],
     },
     });
