--- a/ppms_project/profilingApp/templates/activities/Parent - Preschooler Profile.html
+++ b/ppms_project/profilingApp/templates/activities/Parent - Preschooler Profile.html
@@ -99,9 +99,9 @@
                                             {% elif h.wfa >= -2.0 and h.wfa <= 2.0 %}
                                                 <td style="background-color: rgb(0, 165, 79);"> Normal ({{ h.wfa }})</td>
                                             {% elif h.wfa >= -3.0 and h.wfa < -2.0 %}
-                                                <td style="background-color: rgb(255, 241, 2);"> Underweight ({{ h.wfa }})</td>
+                                                <td style="background-color: rgb(255, 241, 2);"> Wasted ({{ h.wfa }})</td>
                                             {% else %}
-                                                <td style="background-color: rgb(238, 29, 35);"> Severely Underweight ({{ h.wfa }})</td>
+                                                <td style="background-color: rgb(238, 29, 35);"> Severely Wasted ({{ h.wfa }})</td>
                                             {% endif %}
 
                                             {% if h.hfa > 2.0 %}
@@ -283,11 +283,11 @@
                                         </div>
                                     {% elif preschooler.wfa >= -3.0 and preschooler.wfa < -2.0 %}
                                         <div class="card-body p-3">
-                                            <p class="card-text h5" style="color: rgb(255, 241, 2);">Underweight ({{ preschooler.wfa }})</p>
+                                            <p class="card-text h5" style="color: rgb(255, 241, 2);">Wasted ({{ preschooler.wfa }})</p>
                                         </div>
                                     {% else %}
                                         <div class="card-body p-3">
-                                            <p class="card-text h5" style="color: rgb(238, 29, 35);">Severely Underweight ({{ preschooler.wfa }})</p>
+                                            <p class="card-text h5" style="color: rgb(238, 29, 35);">Severely Wasted ({{ preschooler.wfa }})</p>
                                         </div>
                                     {% endif %}
                                     <div class="card-footer text-center text-muted ">
@@ -419,13 +419,13 @@
                                                         </div>
                                                         <div class="col-lg-6 col-12 d-flex justify-content-start  mb-2">
                                                             <i class="fas fa-2x fa-square" style="color: rgb(255, 241, 2);"></i>
-                                                            <span class="mx-3"><h5>Underweight</h5></span>
+                                                            <span class="mx-3"><h5>Wasted</h5></span>
                                                         </div>          
                                                         
                                                         
                                                         <div class="col-lg-6 col-12 d-flex justify-content-start mx-md-4  mb-2" >
                                                             <i class="fas fa-2x fa-square d-flex align-items-center" style="color: rgb(238, 29, 35);"></i>
-                                                            <span class="mx-3"><h5>Severely Underweight</h5></span>
+                                                            <span class="mx-3"><h5>Severely Wasted</h5></span>
                                                         </div>
                                                         <div class="col-lg-6 col-12 d-flex justify-content-start" >
                                                             <i class="fas fa-2x fa-square" style="color: rgb(242, 98, 33);"></i>
@@ -564,13 +564,13 @@
                                                         </div>
                                                         <div class="col-lg-6 col-12 d-flex justify-content-start  mb-2">
                                                             <i class="fas fa-2x fa-square" style="color: rgb(255, 241, 2);"></i>
-                                                            <span class="mx-3"><h5>Underweight</h5></span>
+                                                            <span class="mx-3"><h5>Moderately Wasted</h5></span>
                                                         </div>          
                                                         
                                                         
                                                         <div class="col-lg-6 col-12 d-flex justify-content-start mx-md-4  mb-2" >
                                                             <i class="fas fa-2x fa-square d-flex align-items-center" style="color: rgb(238, 29, 35);"></i>
-                                                            <span class="mx-3"><h5>Severely Underweight</h5></span>
+                                                            <span class="mx-3"><h5>Severely Wasted</h5></span>
                                                         </div>
                                                         <div class="col-lg-6 col-12 d-flex justify-content-start" >
                                                             <i class="fas fa-2x fa-square" style="color: rgb(242, 98, 33);"></i>
